# WingCStructLib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cstructerrorlistener.cpp  cstructerrorlistener.h  cstructvisitorparser.cpp  cstructvisitorparser.h  ctypeparser.cpp  ctypeparser.h  define.h
TestCStruct/: CMakeLists.txt  Test.h  TestAutoDeclStruct.h  TestEmptyStruct.h  TestLargeInt.h  TestOut.h  TestPreDeclStruct.h  TestPreDeclUnion.h  TestPreEnum.h  TestSoLargeStruct.h  main.cpp
c/: CStruct.g4  CStructBaseVisitor.cpp  CStructBaseVisitor.h  CStructLexer.cpp  CStructLexer.h  CStructParser.cpp  CStructParser.h  CStructVisitor.cpp  CStructVisitor.h  antlr4-how-to-use.txt
